Changes in version 1.8.5

BUG FIXES and IMPROVEMENTS

- Correction d'un bug dans les flèches joignantes (shiny_joignantes, leaflet_joignantes et plot_joignantes). Le filtre sur la distance des flèches ne fonctionnait pas.

Changes in version 1.8.4

BUG FIXES and IMPROVEMENTS

- Pour les fonctions leaflet_xxx et shiny_xxx, amélioration de l'affichage des légendes des ronds, classes et flèches.
- Simplification du code.
- Correction de bugs divers.

Changes in version 1.8.3

BUG FIXES and IMPROVEMENTS

- Pour les fonctions leaflet_xxx et shiny_xxx, modification de la gestion d'affichage des légendes des ronds, classes et flèches : construction de la légende et initialisation de l'objet leaflet en projection locale métrique. La reprojection en WGS84 est faite automatiquement à l'affichage de la carte. Cela permet de supprimer les éventuelles déformations de la légende selon la position lon/lat choisie.
- Lors d'un export Qgis, les valeurs des légendes des ronds et des flèches sont affichées directement dans le canevas de la carte et non plus que dans le composeur d'impression.
- Corrections de bugs dans la gestion des bornes de classes.

Changes in version 1.8.2

BUG FIXES and IMPROVEMENTS

- Création d'un dossier layers pour tous les fonds exportés lors d'un export Qgis.

Changes in version 1.8.1

FEATURES

- Les palettes négatives pour le turquoise, vert, violet et gris ne porte plus la mention Insee (Turquoise_Neg_XN_0P, Vert_Neg_XN_0P, Violet_Neg_XN_0P, Gris_Neg_XN_0P).
- Pour les fonctions shiny_xxx, possibilité de changer de palettes de couleurs depuis l'interface shiny.
- Les couleurs de la palette "defaut" correspondent aux couleurs de la palette "RdYlBu" de ColorBrewer.

Changes in version 1.8.0

FEATURES
